tests/valid/Bracketed_Valid_1.wys
void main():
    int x = 0
    (x) = 4
    print (x)
    x = (3)
    print x
    (x) = (((2)))

