tests/errors/Parser/ParserIndent.wys
void f(int x):
 print x
  print x